minimal organization form for prototyping ready

--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -1,5 +1,5 @@
 <div>
-    <h2>Home</h2>
+    <h2>Homez</h2>
     <div>
         <h4>user:</h4>
         <accounts-ui></accounts-ui>
@@ -8,11 +8,9 @@
         <h4>menu:</h4>
         <ul>
             <li><a [routerLink]="['/DashboardPage']">Dashboard</a></li>
-            <li><a [routerLink]="['/EventFormPage']">EventFormPage</a></li>
         </ul>
     </div>
 
      <button (click)="test()">test</button>
      
-     <upload-xlsx></upload-xlsx>
 </div>
