--- a/client/pages/dashboard/dashboard.html
+++ b/client/pages/dashboard/dashboard.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-    <h1>Dashboard</h1>
+    <h1 class="page-header">Dashboard</h1>
       
     <h3>Organizations:</h3>  
     <organization-list></organization-list>
