create event page skeleton ready

--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -1,5 +1,5 @@
-<div>
-    <h2>Homez</h2>
+<div class="container">
+    <h2 class="page-header">Home</h2>
     <div>
         <h4>user:</h4>
         <accounts-ui></accounts-ui>
