--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -11,6 +11,7 @@
         </ul>
     </div>
 
-     <button (click)="test()">test</button>
-     
+    <button (click)="test1()">test1</button>
+    <button (click)="test2()">test2</button>
+    <upload-xlsx></upload-xlsx>
 </div>
